<resources>
    <string name="app_name">Machine note V2</string>
    <string name="next">Naslednji</string>
    <string name="previous">Prejšnji</string>
    <string name="nav_open">Odpri</string>
    <string name="nav_close">Zapri</string>
    <string name="navigation_drawer_open">Odpri navigacijski predal</string>
    <string name="navigation_drawer_close">Zapri navigacijski predal</string>
    <string name="hello_blank_fragment">Pozdravljen prazni fragment</string>
    <string name="request_for_article_scan">Prosim, skeniraj QR kodo</string>
    <string name="rack_label">Regal</string>
    <string name="warehouse_label">Skladišče</string>
    <string name="article">Zaloga</string>
    <string name="stock_label">Zaloga</string>
    <string name="enter_id">Vnesi ID</string>
    <string name="name_of_worker">Ime delavca</string>
    <string name="name_of_line">Izberi ime linije</string>
    <string name="line">Linija</string>
    <string name="reason_for_stoppage">Razlog za zaustavitev stroja</string>
    <string name="opomba">Opomba</string>
    <string name="tab_for_inserting_data">Vnos</string>
    <string name="tab_for_pictures">Slike</string>
    <string name="naloge">Naloge</string>
    <string name="vnos_naloge">Vnos naloge</string>
    <string name="article_minimum">Minimalna zaloga</string>
    <string name="tab_for_info">Informacije</string>
    <string name="username">Uporabniško ime</string>
    <string name="vzdrzevalec">Vzdrževalec</string>
    <string name="password">Geslo</string>
    <string name="changed_parts">Zamenjani deli</string>
    <string name="name_of_shipper">Ime:</string>
    <string name="name_of_company">Ime podjetja:</string>
    <string name="gmail_of_shipper">Gmail:</string>
    <string name="GSM">GSM:</string>
    <string name="telephone_number">Telefonska številka:</string>
    <string name="enter_name">Vnesi ime</string>
    <string name="role_name">Ime role</string>
    <string name="register_button">Registracija</string>
    <string name="line_not_exist">Ta linija ne obstaja</string>
    <string name="scan_cancelled">Skeniranje preklicano</string>
    <string name="sending_stoppage">Pošiljanje Zastoja, prosim počakajte</string>
    <string name="sent">Poslano!</string>
    <string name="fill_all_fields">Izpolni vsa polja</string>
    <string name="delete_image">Izbriši sliko</string>
    <string name="confirm_delete_image">Ali res želite izbrisati to sliko?</string>
    <string name="yes">Da</string>
    <string name="no">Ne</string>
    <string name="pick_line">Izberi Linijo!</string>
    <string name="pick_sklop_linije">Izberi Sklop Linije!</string>
    <string name="no_email_address">Ni e-mail naslova!</string>
    <string name="no_phone_number">Ni telefonske številke!</string>
    <string name="pick_sifrant">Izberi Šifrant</string>
    <string name="cancel">Prekliči</string>
    <string name="error">Napaka: </string>
    <string name="no_connection_explanation">Videti je, da ni povezave do strežnika. Prosim, preverite nastavitve Wi-Fi in poskusite znova.</string>
    <string name="no_connection">Ni povezave do strežnika</string>
    <string name="error_with_getting_rezervni_del">Napaka pri pridobivanju rezervnega dela!</string>
    <string name="image_capture_error">Napaka pri zajemu slike: </string>
    <string name="fetch_sifrant_failed">Pridobivanje šifranta ni uspelo</string>
    <string name="fetch_stoppages_failed">Pridobivanje zastojev ni uspelo</string>
    <string name="fetch_lines_failed">Pridobivanje linij ni uspelo</string>
    <string name="invalid_user">Neveljaven uporabnik</string>
    <string name="scan_qr_code">Skeniraj QR kodo</string>
    <string name="send">Pošlji</string>
    <string name="camera">Kamera</string>
    <string name="id_of_line">ID linije</string>
    <string name="sifrant">Šifrant</string>
    <string name="note">Opomba</string>
    <string name="start_time">Začetni čas</string>
    <string name="end_time">Končni čas</string>
    <string name="time_negative_error">Končni čas mora biti po začetnem</string>
    <string name="tag_zastoji">Zastoji</string>
    <string name="tag_knjizenje">Knjiženje</string>
    <string name="tag_naloge">Naloge</string>
    <string name="tag_imenik">Imenik</string>
    <string name="tag_rezervni_deli">Rezervni deli</string>
    <string name="tag_drobni_materiali">Drobni materiali</string>
    <string name="tag_preventivni_pregledi">Preventivni pregledi</string>
    <string name="tag_narocila">Naročila</string>
    <string name="tag_dodaj_narocilo">Dodaj naročilo</string>
    <string name="tag_uredi_narocilo">Uredi naročilo</string>
    <string name="QR_koda_value_negative">NE</string>
    <string name="QR_koda_value_positive">DA</string>
    <string name="dezurstvo_value_negative">NE</string>
    <string name="dezurstvo">Dežurstvo</string>
    <string name="dezurstvo_value_positive">DA</string>
    <string name="photo_button">photo button</string>
    <string name="field_id">ID</string>
    <string name="field_skladisce">Skladišče</string>
    <string name="field_regal">Regal</string>
    <string name="field_artikel">Artikel</string>
    <string name="field_znaki">Znaki</string>
    <string name="field_artikel_dolgi_text">Artikel Dolgi Text</string>
    <string name="field_proizvajalec">Proizvajalec</string>
    <string name="field_dobavitelj">Dobavitelj</string>
    <string name="field_znesek">Znesek</string>
    <string name="field_minimalna_zaloga">Minimalna Zaloga</string>
    <string name="field_dobava">Dobava</string>
    <string name="field_poraba">Poraba</string>
    <string name="field_inventura">Inventura</string>
    <string name="wrong_qr_code">Napačna QR koda!</string>
    <string name="sklop_linije">sklop linije</string>
    <string name="zamenjani_deli">Zamenjani deli</string>
    <string name="tag_remonti">Remonti</string>
    <string name="najprej_izberi_linijo">Najprej izberi linijo!</string>
    <string name="telefonski_kontakti">Telefonski kontakti</string>
    <string name="ni_telefonske_tevilke">Ni telefonske številke</string>
    <string name="ni_gsm_tevilke">Ni GSM številke</string>
    <string name="ni_e_mail_naslova">Ni e-mail naslova</string>
    <string name="e_posta">E-pošta</string>
    <string name="ni_kontaktne_osebe">Ni kontaktne osebe</string>
    <string name="kontaktna_oseba">Kontaktna oseba</string>
    <string name="ni_imena_podjetja">Ni imena podjetja</string>
    <string name="isci_nalogo">Išči nalogo</string>
    <string name="isci_karkoli">Išči karkoli</string>
    <string name="Login">Login</string>
    <string name="register_help_info">Niste registrirani? Registriraj se tukaj!</string>
    <string name="forgot_password">Resetiraj geslo!</string>
    <string name="available_tasks">Mozne naloge</string>
    <string name="id_rezervnega_dela">ID</string>
    <string name="lokacija">Lokacija</string>
    <string name="skladisce">Skladišče</string>
    <string name="ni_skladisca">Ni skladišča</string>
    <string name="regal">Regal</string>
    <string name="ni_regala">Ni regala</string>
    <string name="artikel">Artikel</string>
    <string name="ni_naziva_artikla">Ni naziva artikla</string>
    <string name="opis">Opis</string>
    <string name="ni_opisa">Ni opisa</string>
    <string name="partnerji">Partnerji</string>
    <string name="proizvajalec">Proizvajalec</string>
    <string name="ni_proizvajalca">Ni proizvajalca</string>
    <string name="dobavitelj">Dobavitelj</string>
    <string name="ni_dobavitelja">Ni dobavitelja</string>
    <string name="cene">Cena</string>
    <string name="znesek">Znesek</string>
    <string name="ni_zneska">Ni zneska</string>
    <string name="dobava">Dobava</string>
    <string name="ni_dobave">Ni dobave</string>
    <string name="poraba">Poraba</string>
    <string name="ni_porabe">Ni porabe</string>
    <string name="inventura">Inventura</string>
    <string name="ni_inventure">Ni inventura</string>
    <string name="skupna_cena">Skupna cena</string>
    <string name="ni_skupne_cene">Ni skupne cene</string>
    <string name="zaloge">Zaloga</string>
    <string name="minimalna_zaloga">Minimalna zaloga</string>
    <string name="ni_minimalne_zaloge">Ni minimalne zaloge</string>
    <string name="dejanska_zaloga">Dejanska zaloga</string>
    <string name="ni_dejanske_zaloge">Ni dejanske zaloge</string>
    <string name="nizka_zaloga_opozorilo">Zaloga je nizka</string>
    <string name="material_header">Material: %s</string>
    <string name="velikost_label">Velikost: %s</string>
    <string name="kvaliteta_label">Kvaliteta: %s</string>
    <string name="vrsta">Vrsta</string>
    <string name="kvaliteta">Kvaliteta</string>
    <string name="material_info">Material: %s\nVrsta: %s\nVelikost: %s</string>
    <string name="dodaj_nalogo">Dodaj nalogo</string>
    <string name="posodobi_nalogo">Posodobi nalogo</string>
    <string name="vnesi_ime_vzdrzevalca">Vnesi ime vzdrzevalca</string>
    <string name="naslov_naloge">Naslov naloge</string>
    <string name="vnesi_naslov_naloge">Vnesi naslov naloge</string>
    <string name="rok_naloge">Rok naloge</string>
    <string name="izberi_rok">Izberi rok</string>
    <string name="opis_naloge">Opis naloge</string>
    <string name="vnesi_opis_naloge">Vnesi opis naloge</string>
    <string name="slika">Slika</string>
    <string name="predogled_slike">Predogled slike</string>
    <string name="dodaj_sliko">Dodaj sliko</string>
    <string name="odstrani_sliko">Odstrani sliko</string>
    <string name="preklici">Preklici</string>
    <string name="shrani_nalogo">Shrani nalogo</string>
    <string name="shrani_narocilo">Shrani naročilo</string>
    <string name="izberi_izvedeni_cas">Izberi čas ko je bila naloga opravljena</string>
    <string name="izvedeni_cas">Naloga je bila opravljena:</string>
    <string name="podatki_naloge">Podatki naloge</string>
    <string name="izvedba_naloge">Izvedba naloge</string>
    <string name="kdo_mora_opraviti">Izvajalec</string>
    <string name="ime_naloge">Naslov naloge</string>
    <string name="podroben_opis_naloge">Opis naloge</string>
    <string name="originalna_slika">Originalna slika</string>
    <string name="originalna_slika_naloge">Originalna slika naloge</string>
    <string name="kdaj_opravljena">Datum izvedbe</string>
    <string name="izberi_datum_izvedbe">Izberi datum izvedbe</string>
    <string name="komentar_izvedbe">Komentar o izvedbi</string>
    <string name="vnesi_komentar_izvedbe">Dodaj komentar o opravljeni nalogi…</string>
    <string name="slika_po_izvedbi">Slika po izvedbi</string>
    <string name="predogled_slike_po_izvedbi">Predogled slike po izvedbi</string>
    <string name="photo_button_po_izvedbi">Dodaj sliko po izvedbi</string>
    <string name="potrdi_izvedbo">Potrdi izvedbo</string>
    <string name="select_image_source">Select Image Source</string>
    <string name="gallery">Gallery</string>
    <string name="vnos_narocila">Vnos Naročila</string>
    <string name="narocila">Naročila</string>
    <string name="mozna_narocila">Možna naročila</string>
    <string name="isci_narocila">Išči naročilo</string>
    <string name="narocnik">Naročnik</string>
    <string name="naziv_artikla">Naziv artikla</string>
    <string name="tehnicni_podatki">Tehnični podatki / Opis:</string>
    <string name="rok_dobave">Rok dobave</string>
    <string name="kolicina">Količina</string>
    <string name="novo_narocilo">Novo naročilo</string>
    <string name="izpolnite_podatke">Izpolnite podatke za novo naročilo</string>
    <string name="osnovni_podatki">Osnovni podatki</string>
    <string name="podatki_o_artiklu">Podatki o artiklu</string>
    <string name="slika_artikla">Slika artikla</string>
    <string name="vnesite_ime_narocnika">Vnesite ime naročnika</string>
    <string name="izberite_datum">Izberite datum dobave</string>
    <string name="vnesite_naziv">Vnesite naziv artikla</string>
    <string name="kolicina_in_enota">Količina in enota</string>
</resources>